--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </audio>
 
     <div class="container">
-        <h1>💖 Happy Valentine Day Nakub Bowie 💖</h1>
+        <h1>💖 Happy Valentine Day Nakub Bowwie 💖</h1>
         <button class="btn" onclick="showMessage()">กดที่นี่สิ!</button>
         <div class="message" id="message">รักเธอที่สุดเลยนะ ❤️</div>
     </div>
